oss文件上云操作

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,13 +5,13 @@ aliyun:
   oss:
     # API??
     # ?????????????
-    accessKeyId: LTAI5tGaf3MA1tJBr5bwo133
+    accessKeyId: xxxxxx
     # ????????????oss????????????
-    accessKeySecret: 3CThxJo8zSxf7VCpvfn4xIml7rKb89
+    accessKeySecret: xxxxxx
     # oss????????
-    endpoint: oss-cn-shanghai.aliyuncs.com
+    endpoint: xxxxxx
     # oss?????
-    bucketName: example-jiangnan
+    bucketName: xxxxxx
     # url???(S)
     policyExpire: 300
     # ??????(M)
