--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,18 @@
             <artifactId>spring-web</artifactId>
             <version>5.3.22</version>
         </dependency>
+        <!--导入导出依赖-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-base</artifactId>
+            <version>4.1.3</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
